deploy/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-prod
  labels:
    app.kubernetes.io/part-of: assignment
    environment: prod
